--- a/media.css
+++ b/media.css
@@ -5,6 +5,9 @@
 }
 
 @media only screen and (max-width: 675px) {
+    h1{
+        color: green;
+    }
     .nav-bar{
         display: none;
     }
